src/App.css
@import url("https://fonts.googleapis.com/css?family=Quicksand");

* {
  font-family: Quicksand;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #eeeaea;
}

button {
  cursor: pointer;
}


/* ------------------------------------------------------------- */
/* LOGIN PAGE */


.login_logo {
  display: flex;
  padding: 2%;
  background-color: #283b32;
}

.login_img {
  margin: 0 auto; 
  height: 80px;
  width: 120px;
}

.login_box {
  border: lightgray 1px solid;
  background-color: white;
  display: block;
  margin: 0 auto;
  padding: 1%;
  width: 300px;
}


/* ------------------------------------------------------------- */


.note_list {
  padding: 20px;
  background-color: white;
  border-radius: 5px;
  margin: 2%;
}

.notes {
  display: inline-block;
  padding: 3px 15px;

  margin-right: 5px;
  margin-bottom: 5px;

  background-color: #eef7cb;
  border: 1px solid grey;
  border-radius: 20px;
}

input {
  margin-bottom: 10px;
  height: 20px;
  width: 200px;
}


/* ------------------------------------------------------------- */
/* HOME PAGE: SIDEBAR */

.side {
  text-align: center;
  margin: 0;
  float: center;
}

.sidebar {
  background-color: white;
  display: inline;
  width: 20%;
  float: left;
  margin: 0;
}

.username {
  font-size: 100%;
}

.title_logo {
  width: 100%;
  display: block;
  align-items: center;
  padding: 6% 0 6% 0;
  background-color: #283b32;
}

.notes_home {
  background-color: #dad7cd;
  display: inline;
  width: 80%;
  height: 100%;
  padding-bottom: 10.5%;
  float: right;
}

.home_box {
  border: lightgray 1px solid;
  margin: 1%;
  padding: 1%;
  float: center;
}

/* ------------------------------------------------------------- */
/* HOME PAGE: TITLE SECTION */

.title_header {
  background-color: #3a5a40;
  display: flex;
  padding: 1%;
  font-family: Quicksand;
  text-align: left;
  color: white;
}

/* HOME PAGE: TITLE SECTION */
.title_name {
  display: flex;
  float: left;
  width: 20%;
  justify-content: center;
}

/* HOME PAGE: SEARCH BAR */
.search_box {
  padding: 2%;
  display: flex;
  float: right;
  width: 80%;
  justify-content: center;
}

.searchbar {
  display: inline;
  width: 80%;
  height: 25px;
  resize: none;
  margin: 1% 0 1% 0;
  /* float: right; */
}

.search_btn {
  /* float: right; */
  margin: 1% 0 1% .5%;
  width: 32px;
  height: 32px;
}

.clear_btn {
  margin: 1% .5% 1% .5%;
  width: 40px;
  height: 32px;
}

/* ------------------------------------------------------------- */
/* HOME PAGE: SUBHEADER SECTION */

.subheader {
  border: none;
  margin: 0;
  /* padding: 2%; */
  background-color: #588157;
}

.img_btn {
  width: 50px;
  height: 50px;
}

.btn_img {
  width: 100%;
}

.subheader_btns_box {
  display: flex;
  padding: .5%;
}

.note_editor_btn {
  margin: .5%;
  padding: .5%;
}

.images_input {
  margin: .5%;
  padding: .5%;
}

.side_subheader_btns {
  display: block;
  width: 100%;
  border: none;
  margin: 0;
  padding: 2%;
} 

.side_user_btns_box {
  margin: 10px;
  padding: 10px;
}

.error {
  font-family: Quicksand;
  background-color: lightpink;
}

.btns_list {
  margin: 15px 25%;
}

.btn {
  margin: 0px 5px;
}

.save {
  margin-left: 0px;
  padding: 3px 10px;
  font-weight: bold;
  float: right;
}

.logout {
  margin: 4%;
  padding: 5px 10px;
  font-weight: bold;
  float: left;
}

.singular_note {
  display: inline-block;
  width: 32%;
  height: 30%;
  margin: 5px;
}


/* ------------------------------------------------------------- */
/* EDIT PAGE: EDIT SECTION */

.title_input_box {
  display: inline;
  float: left;
  width: 70%;
  justify-content: center;
}

.title_input {
  font-size: larger;
  width: 85%;
  margin: 10px 0 10px 0;
  padding: 10px;
  resize: none;
}

.tag_box {
  display: inline;
  float: right;
  width: 20%;
}

.edit_page_btns {
  display: block;
  margin: 10px 0 10px 10px;
  padding: 5px;
  float: right;
}

.note_input {
  width: 98%;
  padding: 10px;
  resize: vertical;
}

.btn {
  border-radius: 5px;
  border: 1px solid #7c7c7c;
}

.submit_btn {
  background-color: #3a5a40;
  color: white;
  padding: 1%;
  margin: 1% 1% 1% 0;
  border-radius: 5px;
  border: #283b32 1px solid;
}

.unselected {
  background-color: rgb(195, 195, 195);
}

.selected {
  background-color: rgb(138, 138, 138);
}

/* ------------------------------------------------------------- */
/* IMAGE EDIT PAGE: EDIT SECTION */

.full_img {
  width: 100%;
}

/* ------------------------------------------------------------- */
/* MAP EDIT PAGE: EDIT SECTION */

.map {
  display: flex;
  width: 100%;
  /* padding: 10%; */

  background-size: cover;
}

table {
  width: 100%;
}

td {
  height: auto;
}

tr {
  height: 47px;
}

/* ------------------------------------------------------------- */
/* COMPONENT: NOTE */

.title_section {
  display: flex;
  background-color: #d9d9d9;
}

.title {
  display: flex;
  align-items: center;
  font-size: 150%;
  padding: 10px;
  width: 70%;
}

.pin_btn {
  width: 15%;
}

/* .body_bottom {
  display: block;
  padding-bottom: 10px;
} */

.body_section {
  background-color: #eeeaea;
}



.body_image {
  /* padding: 15px; */
  height: 180px;
  overflow-y: scroll;
}

.textbox {
  resize: none;
  border: none;
  padding: 15px;
  margin: 0;
  width: 90%;
  height: 150px;
  overflow-wrap: break-word;
  overflow: hidden;
}

.trash_btn {
  float: right;
}


/* ------------------------------------------------------------- */
/* COMPONENT: SETTING LIST */

.dropdown {
  display: block;
  position: absolute;
  top: 100%;
  left: 0px;
  z-index: 1;
  width: 100%;
}

.dropdown_div {
  position: relative;
}

.dropdownItem {
  display: flex;
  flex-grow: 1;
  border: 0.5px solid grey;
  height: 25px;
}

